--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,7 +33,10 @@
         "src/sass/blocks/_promo.scss",
         "src/sass/blocks/_header.scss",
         "src/sass/blocks/_buttons.scss",
+        "src/sass/blocks/_titles.scss",
         "src/sass/blocks/_advantages.scss",
+        "src/sass/blocks/_consultation.scss",
+        "src/sass/blocks/_forms.scss",
         "src/sass/_media.scss"
       ]
     }
