--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,6 +37,7 @@
         "src/sass/blocks/_advantages.scss",
         "src/sass/blocks/_consultation.scss",
         "src/sass/blocks/_forms.scss",
+        "src/sass/blocks/_carousel.scss",
         "src/sass/_media.scss"
       ]
     }
