--- a/prepros-6.config
+++ b/prepros-6.config
@@ -38,6 +38,7 @@
         "src/sass/blocks/_consultation.scss",
         "src/sass/blocks/_forms.scss",
         "src/sass/blocks/_carousel.scss",
+        "src/sass/blocks/_catalog.scss",
         "src/sass/_media.scss"
       ]
     }
