add reviews and footer

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -39,6 +39,8 @@
         "src/sass/blocks/_forms.scss",
         "src/sass/blocks/_carousel.scss",
         "src/sass/blocks/_catalog.scss",
+        "src/sass/blocks/_reviews.scss",
+        "src/sass/blocks/_footer.scss",
         "src/sass/_media.scss"
       ]
     }
