add modal forms

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -41,6 +41,7 @@
         "src/sass/blocks/_catalog.scss",
         "src/sass/blocks/_reviews.scss",
         "src/sass/blocks/_footer.scss",
+        "src/sass/blocks/_modal.scss",
         "src/sass/_media.scss"
       ]
     }
