smooth scroll and pageup

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,12 +21,6 @@
   },
   "imports": [
     {
-      "path": "src/scss/style.scss",
-      "imports": [
-        "src/scss/_general.scss"
-      ]
-    },
-    {
       "path": "src/sass/style.scss",
       "imports": [
         "src/sass/base/_variables.scss",
@@ -42,6 +36,7 @@
         "src/sass/blocks/_reviews.scss",
         "src/sass/blocks/_footer.scss",
         "src/sass/blocks/_modal.scss",
+        "src/sass/blocks/_pageup.scss",
         "src/sass/_media.scss"
       ]
     }
