--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,6 +24,7 @@
       "path": "src/sass/style.scss",
       "imports": [
         "src/sass/base/_variables.scss",
+        "src/sass/base/_animations.scss",
         "src/sass/blocks/_promo.scss",
         "src/sass/blocks/_header.scss",
         "src/sass/blocks/_buttons.scss",
